--- a/app/package.json
+++ b/app/package.json
@@ -10,9 +10,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-image-gallery": "^1.2.7",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.7",
+    "react-simple-image-slider": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
