--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.7",
     "react-simple-image-slider": "^2.4.1",
+    "swiper": "^8.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
