--- a/app/package.json
+++ b/app/package.json
@@ -7,14 +7,17 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.30.0",
     "react-icons": "^4.3.1",
     "react-image-gallery": "^1.2.7",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.7",
     "react-simple-image-slider": "^2.4.1",
+    "react-toastify": "^8.2.0",
     "swiper": "^8.1.1",
     "web-vitals": "^2.1.4"
   },
